--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         Harum non necessitatibus deleniti eum soluta.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="#" class="main-btn" id="downloadBtn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
