--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">NodeJS</p>
+                        <p class="prog-title">Next JS</p>
                         <div class="progress-con">
                             <p class="prog-text">87%</p>
                             <div class="progress">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Python</p>
+                        <p class="prog-title">React Native</p>
                         <div class="progress-con">
                             <p class="prog-text">70%</p>
                             <div class="progress">
