--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
-                        <span class="btn-text">Download CV</span>
+                    <a href="./img/MUHAMMAD MUTTAHAR SHIEKH Updated CV.pdf" class="main-btn" download="">
+                        <span class="btn-text" >Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
@@ -57,7 +57,7 @@
                         Harum non necessitatibus deleniti eum soluta.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn" id="downloadBtn">
+                        <a href="./img/MUHAMMAD MUTTAHAR SHIEKH Updated CV.pdf" class="main-btn" id="downloadBtn" download="">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -526,7 +526,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="#" class="main-btn">
+                                <a href="./img/MUHAMMAD MUTTAHAR SHIEKH Updated CV.pdf" class="main-btn" download="">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
