--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/file.jpg" alt="">
+                    <img src="img/WhatsApp_Image_2024-09-28_at_10.31.34_AM-removebg-preview-removebg-preview.png" alt="">
                 </div>
             </div>
             <div class="right-header">
