--- a/index.html
+++ b/index.html
@@ -224,16 +224,16 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="img/qr code.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/muttahar123/qr-code-generator.git" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://muttaharqrcode.vercel.app/" class="icon">
+                                <i class="fa-solid fa-location-arrow"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
