--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span id="typewriter">Muhammad Muttahar Sheikh. A Web Developer.</span>
+                    Hi, I'm <span id="typewriter">Muhammad Muttahar Sheikh. A Web N App Developer.</span>
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    I'm a MERN Stack Developer skilled in building high-performance web and mobile apps using 
+                    <strong>React.js, Next.js, Node.js, and MongoDB</strong>.
+                    <span id="moreText" class="hidden-text">
+                        With expertise in <strong>React Native</strong>, I create seamless and visually stunning cross-platform experiences.
+                    </span>
+                    <!-- <button id="toggleButton" class="read-more-btn">Read More</button> -->
                 </p>
+                
                 <div class="btn-con">
                     <a href="./img/MUHAMMAD MUTTAHAR SHIEKH Updated CV.pdf" class="main-btn" download="">
                         <span class="btn-text" >Download CV</span>
